Prevent message from wrapping to next line

--- a/components/com_jce/editor/libraries/css/src/filebrowser/main.css
+++ b/components/com_jce/editor/libraries/css/src/filebrowser/main.css
@@ -279,6 +279,7 @@ main>div:last-child {
 
 #browser-message {
     padding-left: 0;
+    white-space: nowrap;
 }
 
 .ie8 div#browser-message {
